# Robot-Packages

./: .gitignore  .gitmodules  README.md
convenience_packages/bash_library/: README.md  add_scripts.sh
convenience_packages/bash_library/autogen/: new_file.sh  new_package.sh  new_readme.sh
convenience_packages/bash_library/convenience/: make_executable.sh
convenience_packages/bash_library/github/: checkout.sh  checkout_all.sh  git_alias.sh
convenience_packages/bash_library/machine_setup/: install_ros.sh  setup.sh
convenience_packages/bash_library/robot/: launch_gui.sh  setup.sh
convenience_packages/bash_library/ros/: node_package  simple_package
convenience_packages/bash_library/shortcuts/: ba  bp  bsh
convenience_packages/bash_library/string_manipulations/: ros_string_manipulations.sh  string_manipulations.sh
convenience_packages/bash_library/system/: build_all.sh  build_project.sh  execute_all.sh
convenience_packages/cmake_examples/: MakeLibraryExample.txt  PackageLinkedToRobotTypesExample.txt  README.md
convenience_packages/configurations/: README.md
convenience_packages/gui_desktop_icon/: README.md  RobotGUI.desktop
dependency_packages/classes/component/: CMakeLists.txt
dependency_packages/classes/component/include/: component.hpp
dependency_packages/classes/component/src/: component.cpp
dependency_packages/classes/pid_controller/src/: scion_pid_controller.cpp
dependency_packages/core_dependencies/: README.md
dependency_packages/core_dependencies/robot_types/: CMakeLists.txt
dependency_packages/core_dependencies/robot_types/include/: robot_types.hpp  struct_types.hpp
dependency_packages/core_dependencies/robot_types/src/: dummy.cpp
dependency_packages/core_dependencies/ros_library/message_publishing/: CMakeLists.txt
dependency_packages/core_dependencies/ros_library/message_publishing/include/: message_publishing.h
dependency_packages/core_dependencies/ros_library/message_publishing/main/: main.cpp
dependency_packages/core_dependencies/ros_library/message_publishing/src/: message_publishing.cpp
dependency_packages/core_dependencies/ros_library/public_service_apis/: CMakeLists.txt
dependency_packages/core_dependencies/ros_library/public_service_apis/include/: public_service_apis.h
dependency_packages/core_dependencies/ros_library/public_service_apis/main/: main.cpp
dependency_packages/core_dependencies/ros_library/public_service_apis/src/: public_service_apis.cpp
dependency_packages/core_dependencies/ros_library/type_conversions/: CMakeLists.txt
dependency_packages/core_dependencies/ros_library/type_conversions/include/: type_conversions.h
dependency_packages/core_dependencies/ros_library/type_conversions/main/: main.cpp
dependency_packages/core_dependencies/ros_library/type_conversions/src/: ros_type_conversions.cpp
dependency_packages/core_dependencies/scion_types/: CMakeLists.txt  README.md
dependency_packages/core_dependencies/scion_types/msg/: RawData.msg
dependency_packages/core_dependencies/scion_types/srv/: GetAbsoluteState.srv  GetRobotPose.srv  GetVelocity.srv  UpdatePid.srv
dependency_packages/libraries/can_client/: CMakeLists.txt
dependency_packages/libraries/can_client/include/: can_client.hpp
dependency_packages/libraries/can_client/src/: can_client.cpp
dependency_packages/libraries/json_library/: CMakeLists.txt
dependency_packages/libraries/json_library/include/: json_library.h
dependency_packages/libraries/json_library/main/: main.cpp
dependency_packages/libraries/json_library/src/: json_library.cpp
dependency_packages/libraries/math_operations/: CMakeLists.txt
dependency_packages/libraries/math_operations/include/: generic_operations.hpp  math_operations.hpp  vector_operations.hpp
dependency_packages/libraries/math_operations/src/: container_operations.cpp  float_operations.cpp  functional_operations.cpp  generic_type_conversions.cpp
dependency_packages/libraries/processes/: CMakeLists.txt
dependency_packages/libraries/processes/include/: processes.hpp
dependency_packages/libraries/processes/main/: main.cpp
dependency_packages/libraries/processes/src/: processes.cpp
robot_packages/control_system/controller_node/: CMakeLists.txt
robot_packages/control_system/controller_node/include/: controller_node.hpp
robot_packages/control_system/controller_node/src/: controller_node.cpp
robot_packages/gui/server/: README.md
robot_packages/gui/server/gui_node/: CMakeLists.txt  README.md
robot_packages/gui/server/gui_node/include/: mainwindow.hpp
robot_packages/gui/server/gui_node/main/: main.cpp
robot_packages/gui/server/gui_node/src/: launch_edit.cpp  mainwindow.cpp  pid_controller.cpp
robot_packages/gui/server/listener/: CMakeLists.txt
robot_packages/gui/server/listener/include/: listener.h
robot_packages/gui/server/listener/main/: main.cpp
robot_packages/gui/server/listener/src/: listener.cpp
robot_packages/gui/server/talker/: CMakeLists.txt
robot_packages/gui/server/talker/include/: talker.h
robot_packages/gui/server/talker/main/: main.cpp
robot_packages/gui/server/talker/src/: talker.cpp
robot_packages/startup/: README.md
robot_packages/startup/can_button/src/: CMakeLists.txt
robot_packages/startup/can_button/src/include/: README.md  can_button.hpp
robot_packages/startup/can_button/src/main/: main.cpp
robot_packages/startup/can_button/src/src/: can_button.cpp  fork_program.cpp
robot_packages/startup/can_button/tst/: CMakeLists.txt
robot_packages/startup/can_button/tst/include/: test_can_button.hpp
robot_packages/startup/can_button/tst/main/: main.cpp
robot_packages/startup/can_button/tst/src/: test_can_button.cpp
